fix(med/low): resolve all remaining medium and low severity issues
M3: Verified buildingFootprintWidths/Heights correct (tile units = RE pixels/10)
M6: Fix ResearchAITest tick boundary assertions for 10 TPS (300/1800, not 600/3600)
M8: Fix LockstepEngine sync interval 30→150 ticks (15s at 10 TPS per RE spec)
M14: Verified LIZARD_CHARGES=2 already used in MineDetonationSystem loop
M15: Add .github/workflows/ci.yml — GitHub Actions CI pipeline (Java 21, Gradle)
M19: Verified CampaignScene already wired from MainMenuScene via AOW2App callback
M23: Add background matchmaking sweep thread (3s interval) to MatchmakingService
M24: Remove unused Redis from docker-compose, verify JWT env var alignment
L3: ResourceChangedEvent reason field changed from String to ResourceChangedReason enum
L4: Verified GameLoop Javadoc already says 10 TPS
L6: Store death animation frame on Unit entity (was calculated then discarded)
L18: Add ASSUMPTION comment to fabricated Episode 3 Arctic Operations
L19: Restrict CORS origins from wildcard to configurable localhost origins
L20: Make INITIAL_ELO_RANGE and MAX_ELO_RANGE configurable via application properties